--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,83 @@
 body {
+  height: 100vh;
+  width: 100vw;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: Ubuntu;
+  background: linear-gradient(
+    45.34deg,
+    #ef476f 5.66%,
+    #ffd166 31.53%,
+    #06d6a0 50.01%,
+    #118ab2 72.18%,
+    #073b4c 94.35%
+  );
+  background-size: 1800% 1800%;
+
+  -webkit-animation: Primary 60s ease infinite;
+  -moz-animation: Primary 60s ease infinite;
+  -o-animation: Primary 60s ease infinite;
+  animation: Primary 60s ease infinite;
+}
+
+@font-face {
+  font-family: 'Ubuntu';
+  src: url('./assets/Ubuntu-Medium.ttf');
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
+}
+
+#root {
+  background-color: #f5f5f5;
+  width: 95vw;
+  height: 93vh;
+}
+
+@-webkit-keyframes Primary {
+  0% {
+    background-position: 91% 0%;
+  }
+  50% {
+    background-position: 10% 100%;
+  }
+  100% {
+    background-position: 91% 0%;
+  }
+}
+@-moz-keyframes Primary {
+  0% {
+    background-position: 91% 0%;
+  }
+  50% {
+    background-position: 10% 100%;
+  }
+  100% {
+    background-position: 91% 0%;
+  }
+}
+@-o-keyframes Primary {
+  0% {
+    background-position: 91% 0%;
+  }
+  50% {
+    background-position: 10% 100%;
+  }
+  100% {
+    background-position: 91% 0%;
+  }
+}
+@keyframes Primary {
+  0% {
+    background-position: 91% 0%;
+  }
+  50% {
+    background-position: 10% 100%;
+  }
+  100% {
+    background-position: 91% 0%;
+  }
 }
