--- a/src/index.css
+++ b/src/index.css
@@ -8,11 +8,11 @@ body {
   font-family: Ubuntu;
   background: linear-gradient(
     45.34deg,
-    #ef476f 5.66%,
+    #ff5700 5.66%,
     #ffd166 31.53%,
     #06d6a0 50.01%,
-    #118ab2 72.18%,
-    #073b4c 94.35%
+    #0e6582 72.18%,
+    #032535 94.35%
   );
   background-size: 1800% 1800%;
 
