--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,8 @@
 body {
   /* height: 100vh;
   width: 100vw; */
-  /* margin: 0;
-  display: flex;
+  margin: 0;
+  /* display: flex;
   justify-content: center;
   align-items: center;
   background: linear-gradient(
