--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,73 +1,7 @@
 body {
-  /* height: 100vh;
-  width: 100vw; */
   margin: 0;
-  /* display: flex;
-  justify-content: center;
-  align-items: center;
-  background: linear-gradient(
-    45.34deg,
-    #ff5700 5.66%,
-    #ffd166 31.53%,
-    #06d6a0 50.01%,
-    #0e6582 72.18%,
-    #032535 94.35%
-  );
-  background-size: 1800% 1800%;
-
-  -webkit-animation: Primary 60s ease infinite;
-  -moz-animation: Primary 60s ease infinite;
-  -o-animation: Primary 60s ease infinite;
-  animation: Primary 60s ease infinite;
 }
 
 #root {
-  background-color: #f5f5f5;
-  width: 95vw;
-  height: 93vh;
-}
-
-@-webkit-keyframes Primary {
-  0% {
-    background-position: 91% 0%;
-  }
-  50% {
-    background-position: 10% 100%;
-  }
-  100% {
-    background-position: 91% 0%;
-  }
-}
-@-moz-keyframes Primary {
-  0% {
-    background-position: 91% 0%;
-  }
-  50% {
-    background-position: 10% 100%;
-  }
-  100% {
-    background-position: 91% 0%;
-  }
-}
-@-o-keyframes Primary {
-  0% {
-    background-position: 91% 0%;
-  }
-  50% {
-    background-position: 10% 100%;
-  }
-  100% {
-    background-position: 91% 0%;
-  }
-}
-@keyframes Primary {
-  0% {
-    background-position: 91% 0%;
-  }
-  50% {
-    background-position: 10% 100%;
-  }
-  100% {
-    background-position: 91% 0%;
-  } */
+  min-height: 100vh;
 }
